[gd_scene load_steps=11 format=2]

[ext_resource path="res://data/theme/default_ui_text.tres" type="Theme" id=1]
[ext_resource path="res://scripts/GUI/ConverterV2.gd" type="Script" id=2]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/GUI/InputConsumer.gd" type="Script" id=4]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/ItemList/MyItemList.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/ItemList/RecipeRow.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GUI/ItemList/CraftingMaterialRow.tscn" type="PackedScene" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="ConverterV2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -19.0
margin_bottom = -20.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipes" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 410.0
margin_bottom = 680.0
rect_min_size = Vector2( 410, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Converter MK1"

[node name="MyItemList" parent="HBoxContainer/Recipes" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 58.0
margin_right = -18.0
margin_bottom = -31.0
scroll_horizontal_enabled = false
Row = ExtResource( 7 )
SelectGroup = SubResource( 1 )
CanDropOnList = false

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 420.0
margin_right = 820.0
margin_bottom = 680.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="Control" parent="HBoxContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -183.0
margin_right = 182.0
margin_bottom = -108.0
rect_min_size = Vector2( 365, 0 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconContainer" type="Control" parent="HBoxContainer/Control/VBoxContainer"]
anchor_right = 1.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="HBoxContainer/Control/VBoxContainer/IconContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 128 )
expand = true

[node name="DescBtn" parent="HBoxContainer/Control/VBoxContainer/IconContainer" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_right = 0.0
margin_bottom = 65.0
Text = "?"
ShortcutKey = "?"
AlwaysOnShortcut = false

[node name="RecipeInfoContainer" type="VBoxContainer" parent="HBoxContainer/Control/VBoxContainer"]
margin_top = 132.0
margin_right = 369.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeName" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer"]
margin_right = 369.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[color=lime]Jerg Battleship[/color]"
text = "Jerg Battleship"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer"]
margin_top = 44.0
margin_right = 369.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="EnergyLabel" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "Energy Cost...."

[node name="EnergyCost" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/HBoxContainer2"]
margin_left = 204.0
margin_right = 369.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "2600"
text = "2600"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer"]
margin_top = 78.0
margin_right = 369.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="TurnLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
text = "Production Time"

[node name="TurnCost" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/HBoxContainer3"]
margin_left = 204.0
margin_right = 369.0
margin_bottom = 30.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "5"
text = "5"

[node name="InCargoContainer" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer"]
margin_top = 112.0
margin_right = 369.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="InCargoLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/InCargoContainer"]
margin_top = 4.0
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
text = "In Cargo......."

[node name="InCargo" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/RecipeInfoContainer/InCargoContainer"]
margin_left = 204.0
margin_right = 369.0
margin_bottom = 30.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "0"
text = "0"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Control/VBoxContainer"]
margin_top = 286.0
margin_right = 369.0
margin_bottom = 290.0

[node name="ShipInfoContainer" type="VBoxContainer" parent="HBoxContainer/Control/VBoxContainer"]
margin_top = 294.0
margin_right = 369.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipTitle" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer"]
margin_right = 369.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[color=lime]Ship's Status[/color]"
text = "Ship's Status"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer"]
margin_top = 44.0
margin_right = 369.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="EnergyShipLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer4"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 210, 0 )
text = "Available Energy.."

[node name="EnergyShip" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer4"]
margin_left = 214.0
margin_right = 369.0
margin_bottom = 30.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[color=lime]5000[/color]"
text = "5000"

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer"]
margin_top = 78.0
margin_right = 369.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="HullShipLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer5"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 210, 0 )
text = "Hull Integrity...."

[node name="HullShip" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer5"]
margin_left = 214.0
margin_right = 369.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=lime]==========[/color]"
text = "=========="

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer"]
margin_top = 112.0
margin_right = 369.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="ShieldShipLabel" type="Label" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer6"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 210, 0 )
text = "Shield............"

[node name="ShieldShip" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/ShipInfoContainer/HBoxContainer6"]
margin_left = 214.0
margin_right = 369.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=aqua]==========[/color]"
text = "=========="

[node name="Craft" parent="HBoxContainer/Control/VBoxContainer" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -109.0
margin_right = 152.0
margin_bottom = -19.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[c]raft"
ShortcutKey = "c"

[node name="Close" parent="HBoxContainer/Control/VBoxContainer" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = 1.0
margin_right = 152.0
margin_bottom = 91.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[esc]close"
ShortcutEnum = 16777217

[node name="Materials" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 830.0
margin_right = 1241.0
margin_bottom = 680.0
rect_min_size = Vector2( 411, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Select Materials"

[node name="MyItemList" parent="HBoxContainer/Materials" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 58.0
margin_right = -18.0
margin_bottom = -31.0
Row = ExtResource( 9 )
